5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4308/executions/1635_2446.log
== SUBMITION (2019-04-14 22:47:25) 
-- CODE:
a = int(input("senha: "))
a1 = s// 100000  
a2 = (s % 100000) // 10000
a3 = (s % 10000) // 1000
a4 = (s % 1000) // 100
a5 = (s % 100) // 10
a6 = s % 10
x = (a2 + a4 + a6) % (a1 + a3 + a5)
if (x! = 0):
	msg = "senha invalida"
else:
	msg = "acesso liberado"
print(msg)
-- EXECUTION TIME:
0.031167
-- ERROR:
Error response from daemon: Container 7e9d62c677c059d421ac0198c8371203ab8d651d4469b686ea5b55a312632995 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 22:47:28) 
-- CODE:
a = int(input("senha: "))
a1 = s// 100000  
a2 = (s % 100000) // 10000
a3 = (s % 10000) // 1000
a4 = (s % 1000) // 100
a5 = (s % 100) // 10
a6 = s % 10
x = (a2 + a4 + a6) % (a1 + a3 + a5)
if (x! = 0):
	msg = "senha invalida"
else:
	msg = "acesso liberado"
print(msg)
-- EXECUTION TIME:
0.0329289
-- ERROR:
Error response from daemon: Container 7e9d62c677c059d421ac0198c8371203ab8d651d4469b686ea5b55a312632995 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 22:47:29) 
-- CODE:
a = int(input("senha: "))
a1 = s// 100000  
a2 = (s % 100000) // 10000
a3 = (s % 10000) // 1000
a4 = (s % 1000) // 100
a5 = (s % 100) // 10
a6 = s % 10
x = (a2 + a4 + a6) % (a1 + a3 + a5)
if (x! = 0):
	msg = "senha invalida"
else:
	msg = "acesso liberado"
print(msg)
-- EXECUTION TIME:
0.0313241
-- ERROR:
Error response from daemon: Container 7e9d62c677c059d421ac0198c8371203ab8d651d4469b686ea5b55a312632995 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 22:47:30) 
-- CODE:
a = int(input("senha: "))
a1 = s// 100000  
a2 = (s % 100000) // 10000
a3 = (s % 10000) // 1000
a4 = (s % 1000) // 100
a5 = (s % 100) // 10
a6 = s % 10
x = (a2 + a4 + a6) % (a1 + a3 + a5)
if (x! = 0):
	msg = "senha invalida"
else:
	msg = "acesso liberado"
print(msg)
-- EXECUTION TIME:
0.0279391
-- ERROR:
Error response from daemon: Container 7e9d62c677c059d421ac0198c8371203ab8d651d4469b686ea5b55a312632995 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 22:47:30) 
-- CODE:
a = int(input("senha: "))
a1 = s// 100000  
a2 = (s % 100000) // 10000
a3 = (s % 10000) // 1000
a4 = (s % 1000) // 100
a5 = (s % 100) // 10
a6 = s % 10
x = (a2 + a4 + a6) % (a1 + a3 + a5)
if (x! = 0):
	msg = "senha invalida"
else:
	msg = "acesso liberado"
print(msg)
-- EXECUTION TIME:
0.037905
-- ERROR:
Error response from daemon: Container 7e9d62c677c059d421ac0198c8371203ab8d651d4469b686ea5b55a312632995 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 22:47:31) 
-- CODE:
a = int(input("senha: "))
a1 = s// 100000  
a2 = (s % 100000) // 10000
a3 = (s % 10000) // 1000
a4 = (s % 1000) // 100
a5 = (s % 100) // 10
a6 = s % 10
x = (a2 + a4 + a6) % (a1 + a3 + a5)
if (x! = 0):
	msg = "senha invalida"
else:
	msg = "acesso liberado"
print(msg)
-- EXECUTION TIME:
0.0328991
-- ERROR:
Error response from daemon: Container 7e9d62c677c059d421ac0198c8371203ab8d651d4469b686ea5b55a312632995 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 22:47:31) 
-- CODE:
a = int(input("senha: "))
a1 = s// 100000  
a2 = (s % 100000) // 10000
a3 = (s % 10000) // 1000
a4 = (s % 1000) // 100
a5 = (s % 100) // 10
a6 = s % 10
x = (a2 + a4 + a6) % (a1 + a3 + a5)
if (x! = 0):
	msg = "senha invalida"
else:
	msg = "acesso liberado"
print(msg)
-- EXECUTION TIME:
0.0349
-- ERROR:
Error response from daemon: Container 7e9d62c677c059d421ac0198c8371203ab8d651d4469b686ea5b55a312632995 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 22:47:53) 
-- CODE:
s = int(input("senha: "))
a1 = s// 100000  
a2 = (s % 100000) // 10000
a3 = (s % 10000) // 1000
a4 = (s % 1000) // 100
a5 = (s % 100) // 10
a6 = s % 10
x = (a2 + a4 + a6) % (a1 + a3 + a5)
if (x! = 0):
	msg = "senha invalida"
else:
	msg = "acesso liberado"
print(msg)
-- EXECUTION TIME:
0.036675
-- ERROR:
Error response from daemon: Container 7e9d62c677c059d421ac0198c8371203ab8d651d4469b686ea5b55a312632995 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 22:47:55) 
-- CODE:
s = int(input("senha: "))
a1 = s// 100000  
a2 = (s % 100000) // 10000
a3 = (s % 10000) // 1000
a4 = (s % 1000) // 100
a5 = (s % 100) // 10
a6 = s % 10
x = (a2 + a4 + a6) % (a1 + a3 + a5)
if (x! = 0):
	msg = "senha invalida"
else:
	msg = "acesso liberado"
print(msg)
-- EXECUTION TIME:
0.0362551
-- ERROR:
Error response from daemon: Container 7e9d62c677c059d421ac0198c8371203ab8d651d4469b686ea5b55a312632995 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 22:48:03) 
-- CODE:
s = int(input("senha: "))
a1 = s // 100000  
a2 = (s % 100000) // 10000
a3 = (s % 10000) // 1000
a4 = (s % 1000) // 100
a5 = (s % 100) // 10
a6 = s % 10
x = (a2 + a4 + a6) % (a1 + a3 + a5)
if (x! = 0):
	msg = "senha invalida"
else:
	msg = "acesso liberado"
print(msg)
-- EXECUTION TIME:
0.0381861
-- ERROR:
Error response from daemon: Container 7e9d62c677c059d421ac0198c8371203ab8d651d4469b686ea5b55a312632995 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 22:48:06) 
-- CODE:
s = int(input("senha: "))
a1 = s // 100000  
a2 = (s % 100000) // 10000
a3 = (s % 10000) // 1000
a4 = (s % 1000) // 100
a5 = (s % 100) // 10
a6 = s % 10
x = (a2 + a4 + a6) % (a1 + a3 + a5)
if (x! = 0):
	msg = "senha invalida"
else:
	msg = "acesso liberado"
print(msg)
-- EXECUTION TIME:
0.036808
-- ERROR:
Error response from daemon: Container 7e9d62c677c059d421ac0198c8371203ab8d651d4469b686ea5b55a312632995 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 22:48:06) 
-- CODE:
s = int(input("senha: "))
a1 = s // 100000  
a2 = (s % 100000) // 10000
a3 = (s % 10000) // 1000
a4 = (s % 1000) // 100
a5 = (s % 100) // 10
a6 = s % 10
x = (a2 + a4 + a6) % (a1 + a3 + a5)
if (x! = 0):
	msg = "senha invalida"
else:
	msg = "acesso liberado"
print(msg)
-- EXECUTION TIME:
0.0310099
-- ERROR:
Error response from daemon: Container 7e9d62c677c059d421ac0198c8371203ab8d651d4469b686ea5b55a312632995 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 22:48:07) 
-- CODE:
s = int(input("senha: "))
a1 = s // 100000  
a2 = (s % 100000) // 10000
a3 = (s % 10000) // 1000
a4 = (s % 1000) // 100
a5 = (s % 100) // 10
a6 = s % 10
x = (a2 + a4 + a6) % (a1 + a3 + a5)
if (x! = 0):
	msg = "senha invalida"
else:
	msg = "acesso liberado"
print(msg)
-- EXECUTION TIME:
0.03773
-- ERROR:
Error response from daemon: Container 7e9d62c677c059d421ac0198c8371203ab8d651d4469b686ea5b55a312632995 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 22:48:07) 
-- CODE:
s = int(input("senha: "))
a1 = s // 100000  
a2 = (s % 100000) // 10000
a3 = (s % 10000) // 1000
a4 = (s % 1000) // 100
a5 = (s % 100) // 10
a6 = s % 10
x = (a2 + a4 + a6) % (a1 + a3 + a5)
if (x! = 0):
	msg = "senha invalida"
else:
	msg = "acesso liberado"
print(msg)
-- EXECUTION TIME:
0.037823
-- ERROR:
Error response from daemon: Container 7e9d62c677c059d421ac0198c8371203ab8d651d4469b686ea5b55a312632995 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 22:48:07) 
-- CODE:
s = int(input("senha: "))
a1 = s // 100000  
a2 = (s % 100000) // 10000
a3 = (s % 10000) // 1000
a4 = (s % 1000) // 100
a5 = (s % 100) // 10
a6 = s % 10
x = (a2 + a4 + a6) % (a1 + a3 + a5)
if (x! = 0):
	msg = "senha invalida"
else:
	msg = "acesso liberado"
print(msg)
-- EXECUTION TIME:
0.035099
-- ERROR:
Error response from daemon: Container 7e9d62c677c059d421ac0198c8371203ab8d651d4469b686ea5b55a312632995 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 22:48:07) 
-- CODE:
s = int(input("senha: "))
a1 = s // 100000  
a2 = (s % 100000) // 10000
a3 = (s % 10000) // 1000
a4 = (s % 1000) // 100
a5 = (s % 100) // 10
a6 = s % 10
x = (a2 + a4 + a6) % (a1 + a3 + a5)
if (x! = 0):
	msg = "senha invalida"
else:
	msg = "acesso liberado"
print(msg)
-- EXECUTION TIME:
0.029403
-- ERROR:
Error response from daemon: Container 7e9d62c677c059d421ac0198c8371203ab8d651d4469b686ea5b55a312632995 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 22:49:04) 
-- CODE:
s = int(input("senha: "))
a1 = s // 100000  
a2 = (s% 100000)// 10000
a3 = (s% 10000) // 1000
a4 = (s % 1000) // 100
a5 = (s % 100) // 10
a6 = s% 10
x = (a2 + a4 + a6) % (a1 + a3 + a5)

if (x! = 0):
	msg = "senha invalida"
else:
	msg = "acesso liberado"
print(msg)
-- EXECUTION TIME:
0.0300031
-- ERROR:
Error response from daemon: Container 7e9d62c677c059d421ac0198c8371203ab8d651d4469b686ea5b55a312632995 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 22:49:05) 
-- CODE:
s = int(input("senha: "))
a1 = s // 100000  
a2 = (s% 100000)// 10000
a3 = (s% 10000) // 1000
a4 = (s % 1000) // 100
a5 = (s % 100) // 10
a6 = s% 10
x = (a2 + a4 + a6) % (a1 + a3 + a5)

if (x! = 0):
	msg = "senha invalida"
else:
	msg = "acesso liberado"
print(msg)
-- EXECUTION TIME:
0.0341461
-- ERROR:
Error response from daemon: Container 7e9d62c677c059d421ac0198c8371203ab8d651d4469b686ea5b55a312632995 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 22:49:07) 
-- CODE:
s = int(input("senha: "))
a1 = s // 100000  
a2 = (s% 100000)// 10000
a3 = (s% 10000) // 1000
a4 = (s % 1000) // 100
a5 = (s % 100) // 10
a6 = s% 10
x = (a2 + a4 + a6) % (a1 + a3 + a5)

if (x! = 0):
	msg = "senha invalida"
else:
	msg = "acesso liberado"
print(msg)
-- EXECUTION TIME:
0.0348821
-- ERROR:
Error response from daemon: Container 7e9d62c677c059d421ac0198c8371203ab8d651d4469b686ea5b55a312632995 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 22:49:07) 
-- CODE:
s = int(input("senha: "))
a1 = s // 100000  
a2 = (s% 100000)// 10000
a3 = (s% 10000) // 1000
a4 = (s % 1000) // 100
a5 = (s % 100) // 10
a6 = s% 10
x = (a2 + a4 + a6) % (a1 + a3 + a5)

if (x! = 0):
	msg = "senha invalida"
else:
	msg = "acesso liberado"
print(msg)
-- EXECUTION TIME:
0.0381749
-- ERROR:
Error response from daemon: Container 7e9d62c677c059d421ac0198c8371203ab8d651d4469b686ea5b55a312632995 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 22:49:08) 
-- CODE:
s = int(input("senha: "))
a1 = s // 100000  
a2 = (s% 100000)// 10000
a3 = (s% 10000) // 1000
a4 = (s % 1000) // 100
a5 = (s % 100) // 10
a6 = s% 10
x = (a2 + a4 + a6) % (a1 + a3 + a5)

if (x! = 0):
	msg = "senha invalida"
else:
	msg = "acesso liberado"
print(msg)
-- EXECUTION TIME:
0.0352268
-- ERROR:
Error response from daemon: Container 7e9d62c677c059d421ac0198c8371203ab8d651d4469b686ea5b55a312632995 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 22:49:08) 
-- CODE:
s = int(input("senha: "))
a1 = s // 100000  
a2 = (s% 100000)// 10000
a3 = (s% 10000) // 1000
a4 = (s % 1000) // 100
a5 = (s % 100) // 10
a6 = s% 10
x = (a2 + a4 + a6) % (a1 + a3 + a5)

if (x! = 0):
	msg = "senha invalida"
else:
	msg = "acesso liberado"
print(msg)
-- EXECUTION TIME:
0.0281801
-- ERROR:
Error response from daemon: Container 7e9d62c677c059d421ac0198c8371203ab8d651d4469b686ea5b55a312632995 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:49:09) 
-- CODE:
s = int(input("senha: "))
a1 = s // 100000  
a2 = (s% 100000)// 10000
a3 = (s% 10000) // 1000
a4 = (s % 1000) // 100
a5 = (s % 100) // 10
a6 = s% 10
x = (a2 + a4 + a6) % (a1 + a3 + a5)

if (x! = 0):
	msg = "senha invalida"
else:
	msg = "acesso liberado"
print(msg)
-- ERROR:
File "XXXX", line 10
    if (x! = 0):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 22:49:23) 
-- CODE:
s = int(input("senha: "))
a1 = s // 100000  
a2 = (s% 100000)// 10000
a3 = (s% 10000) // 1000
a4 = (s % 1000) // 100
a5 = (s % 100) // 10
a6 = s% 10
x = (a2 + a4 + a6) % (a1 + a3 + a5)

if (x! = 0):
	msg = "senha invalida"
else:
	msg = "acesso liberado"
print(msg)
-- EXECUTION TIME:
0.0271211
-- ERROR:
Error response from daemon: Container 7e9d62c677c059d421ac0198c8371203ab8d651d4469b686ea5b55a312632995 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 00:15:37) 
-- CODE:
s = int(input("senha: "))
a1 = s // 100000  
a2 = (s % 100000)// 10000
a3 = (s % 10000) // 1000
a4 = (s % 1000) // 100
a5 = (s % 100) // 10
a6 = s % 10
x = (a2 + a4 + a6) % (a1 + a3 + a5)

if (x! = 0):
	msg = "senha invalida"
else:
	msg = "acesso liberado"
print(msg)
-- EXECUTION TIME:
0.150614
-- ERROR:
  File "/home/codebench/codes/1635/2446/main.py", line 10
    if (x! = 0):
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 00:15:39) 
-- CODE:
s = int(input("senha: "))
a1 = s // 100000  
a2 = (s % 100000)// 10000
a3 = (s % 10000) // 1000
a4 = (s % 1000) // 100
a5 = (s % 100) // 10
a6 = s % 10
x = (a2 + a4 + a6) % (a1 + a3 + a5)

if (x! = 0):
	msg = "senha invalida"
else:
	msg = "acesso liberado"
print(msg)
-- ERROR:
File "XXXX", line 10
    if (x! = 0):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 00:17:04) 
-- CODE:
s = int(input("senha: "))
a1 = s // 100000  
a2 = (s % 100000) // 10000
a3 = (s % 10000) // 1000
a4 = (s % 1000) // 100
a5 = (s % 100) // 10
a6 = s % 10
x = (a2 + a4 + a6) % (a1 + a3 + a5)

if (x! = 0):
	msg = "senha invalida"
if x! <> 0):
	msg = "acesso liberado"
print(msg)
-- EXECUTION TIME:
0.152858
-- ERROR:
  File "/home/codebench/codes/1635/2446/main.py", line 10
    if (x! = 0):
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 00:17:12) 
-- CODE:
s = int(input("senha: "))
a1 = s // 100000  
a2 = (s % 100000) // 10000
a3 = (s % 10000) // 1000
a4 = (s % 1000) // 100
a5 = (s % 100) // 10
a6 = s % 10
x = (a2 + a4 + a6) % (a1 + a3 + a5)

if (x! = 0):
	msg = "senha invalida"
if (x! <> 0):
	msg = "acesso liberado"
print(msg)
-- EXECUTION TIME:
0.245421
-- ERROR:
  File "/home/codebench/codes/1635/2446/main.py", line 10
    if (x! = 0):
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 00:17:16) 
-- CODE:
s = int(input("senha: "))
a1 = s // 100000  
a2 = (s % 100000) // 10000
a3 = (s % 10000) // 1000
a4 = (s % 1000) // 100
a5 = (s % 100) // 10
a6 = s % 10
x = (a2 + a4 + a6) % (a1 + a3 + a5)

if (x! = 0):
	msg = "senha invalida"
if (x! <> 0):
	msg = "acesso liberado"
print(msg)
-- ERROR:
File "XXXX", line 10
    if (x! = 0):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 00:18:07) 
-- CODE:
s = int(input("senha: "))
a1 = s // 100000  
a2 = (s % 100000) // 10000
a3 = (s % 10000) // 1000
a4 = (s % 1000) // 100
a5 = (s % 100) // 10
a6 = s % 10
x = (a2 + a4 + a6) % (a1 + a3 + a5)
if (x = 0):
	msg = "senha invalida"
if (x <> 0):
	msg = "acesso liberado"
print(msg)
-- EXECUTION TIME:
0.166435
-- ERROR:
  File "/home/codebench/codes/1635/2446/main.py", line 9
    if (x = 0):
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 00:18:11) 
-- CODE:
s = int(input("senha: "))
a1 = s // 100000  
a2 = (s % 100000) // 10000
a3 = (s % 10000) // 1000
a4 = (s % 1000) // 100
a5 = (s % 100) // 10
a6 = s % 10
x = (a2 + a4 + a6) % (a1 + a3 + a5)
if (x = 0):
	msg = "senha invalida"
if (x <> 0):
	msg = "acesso liberado"
print(msg)
-- ERROR:
File "XXXX", line 9
    if (x = 0):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 00:18:59) 
-- CODE:
s = int(input("senha: "))
a1 = s // 100000  
a2 = (s % 100000) // 10000
a3 = (s % 10000) // 1000
a4 = (s % 1000) // 100
a5 = (s % 100) // 10
a6 = s % 10
x = (a2 + a4 + a6) % (a1 + a3 + a5)
if (x = 0) :
	msg = "senha invalida"
if (x <> 0) :
	msg = "acesso liberado"
print(msg)
-- EXECUTION TIME:
0.153755
-- ERROR:
  File "/home/codebench/codes/1635/2446/main.py", line 9
    if (x = 0) :
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 00:19:03) 
-- CODE:
s = int(input("senha: "))
a1 = s // 100000  
a2 = (s % 100000) // 10000
a3 = (s % 10000) // 1000
a4 = (s % 1000) // 100
a5 = (s % 100) // 10
a6 = s % 10
x = (a2 + a4 + a6) % (a1 + a3 + a5)
if (x = 0) :
	msg = "senha invalida"
if (x <> 0) :
	msg = "acesso liberado"
print(msg)
-- ERROR:
File "XXXX", line 9
    if (x = 0) :
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 00:19:24) 
-- CODE:
s = int(input("senha: "))
a1 = s // 100000  
a2 = (s % 100000) // 10000
a3 = (s % 10000) // 1000
a4 = (s % 1000) // 100
a5 = (s % 100) // 10
a6 = s % 10
x = (a2 + a4 + a6) % (a1 + a3 + a5)
if (x == 0) :
	msg = "senha invalida"
if (x <> 0) :
	msg = "acesso liberado"
print(msg)
-- ERROR:
File "XXXX", line 11
    if (x <> 0) :
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 00:19:44) 
-- CODE:
s = int(input("senha: "))
a1 = s // 100000  
a2 = (s % 100000) // 10000
a3 = (s % 10000) // 1000
a4 = (s % 1000) // 100
a5 = (s % 100) // 10
a6 = s % 10
x = (a2 + a4 + a6) % (a1 + a3 + a5)
if (x == 0) :
	msg = "senha invalida"
if (x > 0) :
	msg = "acesso liberado"
print(msg)
-- EXECUTION TIME:
0.182489
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
senha invalida
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
acesso liberado
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
senha invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 00:19:54) 
-- CODE:
s = int(input("senha: "))
a1 = s // 100000  
a2 = (s % 100000) // 10000
a3 = (s % 10000) // 1000
a4 = (s % 1000) // 100
a5 = (s % 100) // 10
a6 = s % 10
x = (a2 + a4 + a6) % (a1 + a3 + a5)
if (x == 0) :
	msg = "senha invalida"
if (x > 0) :
	msg = "acesso liberado"
print(msg)
-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 00:20:27) 
-- CODE:
s = int(input("senha: "))
a1 = s // 100000  
a2 = (s % 100000) // 10000
a3 = (s % 10000) // 1000
a4 = (s % 1000) // 100
a5 = (s % 100) // 10
a6 = s % 10
x = (a2 + a4 + a6) % (a1 + a3 + a5)
if (x == 0) :
	msg = "senha invalida"
if (x > 0) :
	msg = "acesso liberado"
print(msg)
-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 00:20:52) 
-- CODE:
s = int(input("senha: "))
a1 = s // 100000  
a2 = (s % 100000) // 10000
a3 = (s % 10000) // 1000
a4 = (s % 1000) // 100
a5 = (s % 100) // 10
a6 = s % 10
x = (a2 + a4 + a6) % (a1 + a3 + a5)
if (x == 0) :
	msg = "senha invalida"
if (x > 0) :
	msg = "acesso liberado"
print(msg)
-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 00:21:32) 
-- CODE:
s = int(input("senha: "))
a1 = s // 100000  
a2 = (s % 100000) // 10000
a3 = (s % 10000) // 1000
a4 = (s % 1000) // 100
a5 = (s % 100) // 10
a6 = s % 10
x = (a2 + a4 + a6) % (a1 + a3 + a5)
if (x == 0) :
	msg = "senha invalida"
if (x > 0) :
	msg = "acesso liberado"
print(msg)
-- EXECUTION TIME:
0.163006
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
senha invalida
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
acesso liberado
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
senha invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 00:25:59) 
-- CODE:
s = int(input("senha: "))
a1 = s // 100000  
a2 = (s % 100000) // 10000
a3 = (s % 10000) // 1000
a4 = (s % 1000) // 100
a5 = (s % 100) // 10
a6 = s % 10
x = (a2 + a4 + a6) % (a1 + a3 + a5)
if (x == 0) :
	msg = "acesso liberado"
if (x > 0) :
	msg = "acesso liberado"
print(msg)
-- EXECUTION TIME:
0.219262
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
acesso liberado
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 00:26:25) 
-- CODE:
s = int(input("senha: "))
a1 = s // 100000  
a2 = (s % 100000) // 10000
a3 = (s % 10000) // 1000
a4 = (s % 1000) // 100
a5 = (s % 100) // 10
a6 = s % 10
x = (a2 + a4 + a6) % (a1 + a3 + a5)
if (x == 0) :
	msg = "acesso liberado"
if (x > 0) :
	msg = "senha invalida"
print(msg)
-- EXECUTION TIME:
0.134398
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
